feat: 增加中文说明

--- a/src/index.html
+++ b/src/index.html
@@ -6,16 +6,31 @@
     <title>Kinzo's Universe</title>
 </head>
 <body>
-    <canvas class="webgl"></canvas>
-    <section class="section">
-        <!-- <h1><span class="textRun" id="textRun"></span>_</h1> -->
-        <span class="type"> 
-            <span class="hello"> Hello World!</span>
-            <span class="clickBig" id="sun"> Click on the SUN to see thing better</span>
-            <span class="welldone" id="welldone"> Well done</span>
-            <span class="direction" id="direction"> Click on the planet you want to travel to</span>
-          </span>
-    </section>
+<canvas class="webgl"></canvas>
+<section class="section">
+    <!-- <h1><span class="textRun" id="textRun"></span>_</h1> -->
+    <span class="type">
+        <span class="hello">
+            Hello World!
+            <span class="cn-text">你好，世界！</span>
+        </span>
+
+        <span class="clickBig" id="sun">
+            Click on the SUN to see thing better
+            <span class="cn-text">点击太阳看得更清楚</span>
+        </span>
+
+        <span class="welldone" id="welldone">
+            Well done
+            <span class="cn-text">干得漂亮</span>
+        </span>
+
+        <span class="direction" id="direction">
+            Click on the planet you want to travel to
+            <span class="cn-text">点击你想前往的星球</span>
+        </span>
+    </span>
+</section>
 </body>
 </html>
 
